<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textAppearance="@style/helloStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/hello"
        android:src="@drawable/welcome_picture"
        tools:ignore="MissingConstraints"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/open_date_picker"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/open_date_picker"
        android:background="@drawable/ripple_effect"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintEnd_toStartOf="@+id/button_start"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="10dp"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:enabled="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="10dp"
        android:text="@string/start"
        android:textAppearance="@style/helloStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/open_date_picker"
        app:layout_constraintTop_toBottomOf="@id/img" />

</androidx.constraintlayout.widget.ConstraintLayout>